fixed hexagon spacing

--- a/css/original.css
+++ b/css/original.css
@@ -351,7 +351,7 @@ img.diff{
   margin: auto 0;
   max-width: 275px;
 }
-.col{
+.diff-col{
   float: left;
   text-align: center;
 }
